--- a/src/components/TimePage.module.css
+++ b/src/components/TimePage.module.css
@@ -55,9 +55,9 @@
 
 .bodyText2 {
     padding-top: 30px ;
-    padding-bottom: 0px;
-    padding-right: 200px;
-    padding-left: 200px;
+    padding-bottom: 20px;
+    padding-right: 10px;
+    padding-left: 10px;
     width: 80%;
     text-align: justify
 }
